// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render NoteForm correctly 1`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <button
      className="btn-link form__btn"
    >
      <span
        className="icon icon-checkmark"
      />
       Save
    </button>
    <p
      className="form__warning"
    />
    <div
      className="form__input-wrapper"
    >
      <input
        className="form__input form__input--title"
        onChange={[Function]}
        placeholder="Note title"
        type="text"
        value=""
      />
      <textarea
        autoFocus={true}
        className="form__input"
        onChange={[Function]}
        placeholder="Start typing"
        rows="20"
        value=""
      />
    </div>
  </form>
</div>
`;

exports[`should render NoteForm with note data 1`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <button
      className="btn-link form__btn"
    >
      <span
        className="icon icon-checkmark"
      />
       Save
    </button>
    <p
      className="form__warning"
    />
    <div
      className="form__input-wrapper"
    >
      <input
        className="form__input form__input--title"
        onChange={[Function]}
        placeholder="Note title"
        type="text"
        value="Letter"
      />
      <textarea
        autoFocus={true}
        className="form__input"
        onChange={[Function]}
        placeholder="Start typing"
        rows="20"
        value="Dear friend"
      />
    </div>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <button
      className="btn-link form__btn"
    >
      <span
        className="icon icon-checkmark"
      />
       Save
    </button>
    <p
      className="form__warning"
    />
    <div
      className="form__input-wrapper"
    >
      <input
        className="form__input form__input--title"
        onChange={[Function]}
        placeholder="Note title"
        type="text"
        value=""
      />
      <textarea
        autoFocus={true}
        className="form__input"
        onChange={[Function]}
        placeholder="Start typing"
        rows="20"
        value=""
      />
    </div>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <button
      className="btn-link form__btn"
    >
      <span
        className="icon icon-checkmark"
      />
       Save
    </button>
    <p
      className="form__warning"
    >
      Type something!
    </p>
    <div
      className="form__input-wrapper"
    >
      <input
        className="form__input form__input--title"
        onChange={[Function]}
        placeholder="Note title"
        type="text"
        value=""
      />
      <textarea
        autoFocus={true}
        className="form__input"
        onChange={[Function]}
        placeholder="Start typing"
        rows="20"
        value=""
      />
    </div>
  </form>
</div>
`;
